--- a/index.html
+++ b/index.html
@@ -53,13 +53,10 @@
 
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>John Doe</b></div><br>
+                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Xiucai Ding</b></div><br>
                 <p><b>john at doe.com</b><br>
                 <p>Department of Statistics<br>
                 University of California Davis<br>
-                Street<br>
-                City <br>
-                Country<br>
                 </p>
             </div>
             
