--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
                 <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Xiucai Ding</b></div><br>
-                <p><b>john at doe.com</b><br>
+                <p><b>xiucaiding89@gmail.com</b><br>
                 <p>Department of Statistics<br>
                 University of California Davis<br>
                 </p>
