--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 			   <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
                 <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b>Xiucai Ding</b></div><br>
+		<img src="img.jpg" alt="Trulli" width="500" height="333">
                 <p><b>xiucaiding89@gmail.com</b><br>
                 <p>Department of Statistics<br>
                 University of California Davis<br>
