--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-inverse">
       <div class="container">
 		<ul class="nav navbar-nav">
-              <li><a href="/">Home</a></li>
+              <li><a href="/"><b>Home</b></a></li>
               <li><a href="#publications">Publications</a></li> 
               <li><a href="#">Teaching</a></li> 
 		</ul>
@@ -42,7 +42,7 @@
 			
 			   <!-- Contact Info on the Sidebar -->
             <div class="col-md-4">
-                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b> &nbsp &nbsp &nbsp Xiucai Ding</b></div><br>
+                <div style="font-family: 'Oswald', sans-serif; font-size: 32px;"><b> Xiucai Ding</b></div><br>
 		<img src="img.jpg" alt="Trulli" width="240" height="280">
 		<p><br>    
                 <p><b>xiucaiding89@gmail.com</b><br>
