--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <!-- Navigation -->
     <nav class="navbar navbar-inverse">
-      <div class="container">
+      <div class="container" style="margin:0 auto;">
 		<ul class="nav navbar-nav">
               <li><a href="/"><b>Home</b></a></li>
               <li><a href="#publications"><b>Publications</b></a></li> 
@@ -37,7 +37,7 @@
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 200vh; width: 200vh;">
+            <div class="col-md-8" style="height: 200vh;">
 			
 			
 			   <!-- Contact Info on the Sidebar -->
