--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <!-- Navigation -->
     <nav class="navbar navbar-inverse">
-      <div class="container" style="margin:30 auto;">
+      <div class="container">
 		<ul class="nav navbar-nav">
               <li><a href="/"><b>Home</b></a></li>
               <li><a href="#publications"><b>Publications</b></a></li> 
@@ -55,12 +55,12 @@
 		<!--    
                 <img class="img-responsive" src="photo.gif" alt=""><br>
                 -->
-                <div style="margin-top:10%; text-align:justify;">                
-					<p>  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp Lorem ipsum dolor sit amet, consectetur adipiscing <a href="#">elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div class="col-md-4" style="margin-top:10%; text-align:justify;">                
+					<p>   Lorem ipsum dolor sit amet, consectetur adipiscing <a href="#">elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 					
-					<p>  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+					<p>  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 					
-					<p>  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp  &nbsp            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+					<p>  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
                 </div>
             </div> 
 
