--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<p>  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 					
 					<p> <b> Selected publications </b>  
-			                <ul>   The Annals of Statistics </ul>
+			                <ul>  <li> The Annals of Statistics </li> </ul>
 			
 			</p>
 			                
