--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 					
 					<p> <b> Selected works </b>  
 			                <ul>  
-				 <li> <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices, with Zhigang Bao, Jingming Wang, and Ke Wang, Submitted</li>	 
+				 <li> <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, with Zhigang Bao, Jingming Wang, and Ke Wang, Submitted</li>	 
 		                 <li> <a href="https://projecteuclid.org/euclid.aos/1597370680">Estimation and inference for precision matrices of nonstationary time series</a>, with Zhou Zhou, <b>The Annals of Statistics</b> </li>
 			         <li> <a href="https://arxiv.org/abs/1809.10476"> Singular vector and singular subspace distribution for the matrix denoising model </a>, with Zhigang Bao and Ke Wang, <b>The Annals of Statistics </b> </li> 
 			         <li> <a href="https://arxiv.org/abs/1905.13060"> Spiked separable covariance matrices and principal components </a>, with Fan Yang, <b>The Annals of Statistics </b> </li> 
-			         <li> <a href="https://projecteuclid.org/euclid.aoap/1527840030"> A necessary and sufficient condition for edge universality at the largest singular values of covariance matrices </a>, with Fan Yang, <b>The Annals of Applied Probability </b> </li>     
+			         <li> <a href="https://projecteuclid.org/euclid.bj/1574758832"> High dimensional deformed rectangular matrices with applications in matrix denoising </a>, <b> Bernoulli </b> </li>     
 			</ul>
 			
 			</p>
