--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 					<p>   I am currently an Assistant Professor in the Department of Statsitics <a href="#">elit</a>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 					
 					<p>  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-					
-					<p> <b> Selected works </b>  
+					  <p> &nbsp </p>
+					<p> <b><font size="+4"> Selected works </font></b>  
 			                <ul>  
-				 <li> <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, with Zhigang Bao, Jingming Wang, and Ke Wang, Submitted</li>	 
-		                 <li> <a href="https://projecteuclid.org/euclid.aos/1597370680">Estimation and inference for precision matrices of nonstationary time series</a>, with Zhou Zhou, <b>The Annals of Statistics</b> </li>
-			         <li> <a href="https://arxiv.org/abs/1809.10476"> Singular vector and singular subspace distribution for the matrix denoising model </a>, with Zhigang Bao and Ke Wang, <b>The Annals of Statistics </b> </li> 
-			         <li> <a href="https://arxiv.org/abs/1905.13060"> Spiked separable covariance matrices and principal components </a>, with Fan Yang, <b>The Annals of Statistics </b> </li> 
+				 <li> <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, Submitted, with Zhigang Bao, Jingming Wang, and Ke Wang</li>	 
+		                 <li> <a href="https://projecteuclid.org/euclid.aos/1597370680">Estimation and inference for precision matrices of nonstationary time series</a>, <b>The Annals of Statistics</b>, with Zhou Zhou </li>
+			         <li> <a href="https://arxiv.org/abs/1809.10476"> Singular vector and singular subspace distribution for the matrix denoising model </a>, <b>The Annals of Statistics </b>,with Zhigang Bao and Ke Wang </li> 
+			         <li> <a href="https://arxiv.org/abs/1905.13060"> Spiked separable covariance matrices and principal components </a>,  <b>The Annals of Statistics </b>, with Fan Yang </li> 
 			         <li> <a href="https://projecteuclid.org/euclid.bj/1574758832"> High dimensional deformed rectangular matrices with applications in matrix denoising </a>, <b> Bernoulli </b> </li>     
 			</ul>
 			
