--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
 					
 					<p>  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 					  <p> &nbsp </p>
-					<p> <b><font size="+4"> Selected works </font></b>  
+					<p> <b><font size="+3"> Selected works </font></b>  
 			                <ul>  
 				 <li> <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, Submitted, with Zhigang Bao, Jingming Wang, and Ke Wang</li>	 
-		                 <li> <a href="https://projecteuclid.org/euclid.aos/1597370680">Estimation and inference for precision matrices of nonstationary time series</a>, <b>The Annals of Statistics</b>, with Zhou Zhou </li>
-			         <li> <a href="https://arxiv.org/abs/1809.10476"> Singular vector and singular subspace distribution for the matrix denoising model </a>, <b>The Annals of Statistics </b>,with Zhigang Bao and Ke Wang </li> 
-			         <li> <a href="https://arxiv.org/abs/1905.13060"> Spiked separable covariance matrices and principal components </a>,  <b>The Annals of Statistics </b>, with Fan Yang </li> 
-			         <li> <a href="https://projecteuclid.org/euclid.bj/1574758832"> High dimensional deformed rectangular matrices with applications in matrix denoising </a>, <b> Bernoulli </b> </li>     
+		                 <li> <a href="https://projecteuclid.org/euclid.aos/1597370680">Estimation and inference for precision matrices of nonstationary time series</a>, <b>The Annals of Statistics</b>, with Zhou Zhou</li>
+			         <li> <a href="https://arxiv.org/abs/1809.10476"> Singular vector and singular subspace distribution for the matrix denoising model</a>, <b>The Annals of Statistics</b>, with Zhigang Bao and Ke Wang</li> 
+			         <li> <a href="https://arxiv.org/abs/1905.13060"> Spiked separable covariance matrices and principal components</a>,  <b>The Annals of Statistics</b>, with Fan Yang </li> 
+			         <li> <a href="https://projecteuclid.org/euclid.bj/1574758832"> High dimensional deformed rectangular matrices with applications in matrix denoising</a>, <b>Bernoulli</b></li>
+				 <li> <a href="https://projecteuclid.org/euclid.aoap/1527840030">A necessary and sufficient condition for edge universality at the largest singular values of covariance matrices</a>,  <b>The Annals of Applied Probability</b>, with Fan Yang</li> 		
 			</ul>
 			
 			</p>
