--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <p>Department of Statistics<br>
                 University of California Davis<br>
                 </p>
+		 <p> Davis, CA 95616</p>   
             </div>
                 
                 <!-- Main Image -->
