--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
                 <p><b>xiucaiding89@gmail.com</b><br>
                 <p>Department of Statistics<br>
                 University of California Davis<br>
-                </p>
-		 <p> Davis, CA 95616</p>   
+		Davis, CA 95616<br>
+                </p>  
+	      <p><br>     
             </div>
                 
                 <!-- Main Image -->
