--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <nav class="navbar navbar-inverse">
       <div class="container">
 		<ul class="nav navbar-nav">
-              <li><a href="/"><b>Home</b></a></li>
-              <li><a href="#publications"><b>Research</b></a></li> 
+              <li><a href="index.html"><b>Home</b></a></li>
+              <li><a href="research.html"><b>Research</b></a></li> 
               <li><a href="#teaching"><b>Teaching</b></a></li> 
 		</ul>
 	  </div>
