--- a/research.html
+++ b/research.html
@@ -43,26 +43,16 @@
                 
                 <div style="margin-top:3%; text-align:justify;">    
 			     <p> &nbsp </p>
-			                <p> &nbsp </p>
-	        <p> <b><font size="+1"> arXiv preprints </font></b>  
+	        <p> <b><font size="+1"> Research papers </font></b>  
 			                <ol> 
 	  <li> <a href="https://arxiv.org/abs/2009.00389">Edge statistics of large dimensional deformed rectangular matrices</a>, In submission, with Fan Yang, arxiv: 2009.00389 </li>					
 	  <li> <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, Submitted, with Zhigang Bao, Jingming Wang, and Ke Wang, arxiv:2008.11903 </li>	 
 	  <li> <a href="https://arxiv.org/abs/2008.04166">Tracy-Widom distribution for the edge eigenvalues of Gram type random matrices</a>, In submission, with Fan Yang, arxiv: 2008.04166 </li>
 	  <li> <a href="https://arxiv.org/abs/1912.12937">Globally Optimal And Adaptive Short-Term Forecast of Locally Stationary Time Series And A Test for Its Stability</a>, In submission, with Zhou Zhou, arxiv: 1912.12937 </li>	 					
-               </o1> 
-		</p>
-		   <p> &nbsp </p>				
-		   <p> <b><font size="+1"> Under revision </font></b>  
-			   <o1>
-		     <li> <a href=""> Multivariate functional responses low rank regression with an application to brain imaging data</a>, Major revision and Resubmitted to <b>The Canadian Journal of Statistics</b>, with Dengdeng Yu, Zhengwu Zhang, and Dehan Kong </1i> 	
-		      <li> <a href="https://arxiv.org/abs/1909.11734"> On the spectral property of kernel-based sensor fusion algorithms of high dimensional data</a>, Minor revision and Resubmitted to <b>IEEE Transaction on Information Theory</b>, with Hau-Tieng Wu</1i> 	 	
+          <li> <a href=""> Multivariate functional responses low rank regression with an application to brain imaging data</a>, Major revision and Resubmitted to <b>The Canadian Journal of Statistics</b>, with Dengdeng Yu, Zhengwu Zhang, and Dehan Kong </1i> 	
+          <li> <a href="https://arxiv.org/abs/1909.11734"> On the spectral property of kernel-based sensor fusion algorithms of high dimensional data</a>, Minor revision and Resubmitted to <b>IEEE Transaction on Information Theory</b>, with Hau-Tieng Wu</1i> 	 	
 		     </o1>		
-			</p>
-		<p> &nbsp </p>	
-	   <p> <b><font size="+1"> Peer Revieded Papers</font></b> 
-		    
-	   </p>				
+			</p>			
                 </div>
             </div> 
 
