--- a/research.html
+++ b/research.html
@@ -45,7 +45,7 @@
 			     <p> &nbsp </p>
 	        <p> <b><font size="+1"> Research papers </font></b>  
 			                <ol> 
-	  <li> <a href="https://arxiv.org/abs/2009.00389">Edge statistics of large dimensional deformed rectangular matrices</a>, In submission, with Fan Yang, arxiv: 2009.00389 </li>					
+	  <li> <b>X. Ding</b> and F. Yang <a href="https://arxiv.org/abs/2009.00389">Edge statistics of large dimensional deformed rectangular matrices</a>, arxiv: 2009.00389. In submission </li>					
 	  <li> <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, Submitted, with Zhigang Bao, Jingming Wang, and Ke Wang, arxiv:2008.11903 </li>	 
 	  <li> <a href="https://arxiv.org/abs/2008.04166">Tracy-Widom distribution for the edge eigenvalues of Gram type random matrices</a>, In submission, with Fan Yang, arxiv: 2008.04166 </li>
 	  <li> <a href="https://arxiv.org/abs/1912.12937">Globally Optimal And Adaptive Short-Term Forecast of Locally Stationary Time Series And A Test for Its Stability</a>, In submission, with Zhou Zhou, arxiv: 1912.12937 </li>	 					
