--- a/research.html
+++ b/research.html
@@ -49,8 +49,8 @@
 	  <li> Z. Bao, <b>X. Ding</b>, J. Wang, and K. Wang. (alphabetical order). <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, arxiv:2008.11903. Submitted.</li>	 
 	  <li> <b>X. Ding</b> and F. Yang. <a href="https://arxiv.org/abs/2008.04166">Tracy-Widom distribution for the edge eigenvalues of Gram type random matrices</a>, arxiv: 2008.04166. In submission.</li>
 	  <li> <b>X. Ding</b> and Z. Zhou. <a href="https://arxiv.org/abs/1912.12937">Globally Optimal And Adaptive Short-Term Forecast of Locally Stationary Time Series And A Test for Its Stability</a>, arxiv: 1912.12937. Submitted. </li>	 					
-          <li> <a href=""> Multivariate functional responses low rank regression with an application to brain imaging data</a>, Major revision and Resubmitted to <b>The Canadian Journal of Statistics</b>, with Dengdeng Yu, Zhengwu Zhang, and Dehan Kong </1i> 	
-          <li> <a href="https://arxiv.org/abs/1909.11734"> On the spectral property of kernel-based sensor fusion algorithms of high dimensional data</a>, Minor revision and Resubmitted to <b>IEEE Transaction on Information Theory</b>, with Hau-Tieng Wu</1i> 	 	
+          <li> <b><X. Ding></b>, D. Yu, Z. Zhang, and D. Kong. <a href=""> Multivariate functional responses low rank regression with an application to brain imaging data</a>. Major revision and Resubmitted to <b>The Canadian Journal of Statistics</b></1i> 	
+          <li> <b>X. Ding</b>, and H.-T. Wu. <a href="https://arxiv.org/abs/1909.11734"> On the spectral property of kernel-based sensor fusion algorithms of high dimensional data</a>, arxiv: 1909.11734. Minor revision and Resubmitted to <b>IEEE Transactions on Information Theory</b></1i> 	 	
 		     </o1>		
 			</p>			
                 </div>
