--- a/research.html
+++ b/research.html
@@ -43,7 +43,7 @@
                 
                 <div style="margin-top:3%; text-align:justify;">    
 			     <p> &nbsp </p>
-	        <p> <b><font size="+1"> Research papers </font></b>  
+	        <div> <b><font size="+1"> Research papers </font></b>  
 			                <ol> 
 	  <li> <b>X. Ding</b> and F. Yang. <a href="https://arxiv.org/abs/2009.00389">Edge statistics of large dimensional deformed rectangular matrices</a>, arxiv: 2009.00389. In submission.</li>					
 	  <li> Z. Bao, <b>X. Ding</b>, J. Wang, and K. Wang. (alphabetical order). <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, arxiv:2008.11903. Submitted.</li>	 
@@ -59,10 +59,9 @@
           <li> <b>X. Ding</b>. <a href="https://www.cambridge.org/core/journals/advances-in-applied-probability/article/singular-vector-distribution-of-sample-covariance-matrices/67B20ABE4FE8FCA3DE140DD9086F8918">Singular vector distribution of sample covariance matrices</a>, <b>Advances in Applied Probability</b>,51(1): 236-267, 2019.</li>	
 	  <li> <b>X. Ding</b>, and F. Yang. <a href="https://projecteuclid.org/euclid.aoap/1527840030">A necessary and sufficient condition for edge universality at the largest singular values of covariance matrices</a>, <b>The Annals of Applied Probability</b>, 28(3):1679-1738, 2018. </li>    
 		    </o1>		
-			</p>
-	    <p> <b><font size="+1"> Working papers </font></b>  
-            </p>		    
+			</div>	    		    
                 </div>
+	
             </div> 
 
          
