--- a/teaching.html
+++ b/teaching.html
@@ -22,9 +22,9 @@
     <nav class="navbar navbar-inverse">
       <div class="container">
 		<ul class="nav navbar-nav">
-              <li><a href="/">Home</a></li>
-              <li><a href="research.html">Research</a></li> 
-              <li><a href="teaching.html">Teaching</a></li> 
+              <li><a href="/"><b>Home</b></a></li>
+              <li><a href="research.html"><b>Research</b></a></li> 
+              <li><a href="teaching.html"><b>Teaching</b></a></li> 
 		</ul>
 	  </div>
 	</nav>
