--- a/research.html
+++ b/research.html
@@ -33,13 +33,13 @@
         <div class="row">
 
             <!-- Entries Column -->
-            <div class="col-md-8" style="height: 100vh;">
+            <div class="col-md-8" style="height: 150vh;">
 			
 		
                 
                 <div style="margin-top:3%; text-align:justify;">    
 			     <p> &nbsp </p>
-	        <div> <b><font size="+1"> Research papers </font></b>  
+	        <div> <b><font size="+1"> Research papers </font></b><br>  
 			                <ol> 
 	  <li> <b>X. Ding</b> and F. Yang. <a href="https://arxiv.org/abs/2009.00389">Edge statistics of large dimensional deformed rectangular matrices</a>, arxiv: 2009.00389. In submission.</li>					
 	  <li> Z. Bao, <b>X. Ding</b>, J. Wang, and K. Wang. (alphabetical order). <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, arxiv:2008.11903. Submitted.</li>	 
@@ -56,9 +56,11 @@
 	  <li> <b>X. Ding</b>, and F. Yang. <a href="https://projecteuclid.org/euclid.aoap/1527840030">A necessary and sufficient condition for edge universality at the largest singular values of covariance matrices</a>, <b>The Annals of Applied Probability</b>, 28(3):1679-1738, 2018. </li>    
 		    </o1>		
 			</div>	
-		<div> <b><font size="+1"> Working papers </font></b>  
+		<div> <b><font size="+1"> Working papers </font></b> <br> 
 			                <ol>
-					<li> <b>X. Ding</b>, and  </li>
+					<li> <b>X. Ding</b>, and H. Ji. Local laws for multiplication of random matrices and spiked unitarily invariant models. In preparation, 2020. </li>
+					<li> <b>X. Ding</b>, and H.-T. Wu. Phase transition and robustness of kernel methods for recovering low-dimensional manifold corrupted in high dimensional noise. In preparation, 2020. </li>	
+					<li> <b>X. Ding</b>, and Z. Zhou. Simultaneous Sieve Inference for Time-Inhomogeneous Nonlinear Time Series Regression. In preparation, 2020. </li>	
 					</o1>	
 		<div>				
 		
