--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                 University of California Davis<br>
 		Davis, CA 95616<br>
                 </p>  
-	      <p><br>    
+	      <p><br> 
+		<p> Links to my collaborators and friends<br>
+		<a href="http://mazgbao.people.ust.hk/"> Zhigang Bao</a>	
 		<p><br> 
 		<p><br>
 		<p><br> 
