--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div style="font-size: 32px;"><b> Xiucai Ding</b></div><br>
 		<img src="img.jpg" alt="Trulli" width="243" height="290">
 		<p><br>   
-                <p><b>xiucaiding89@gmail.com</b><br>
+                <p><b>xcading@ucdavis.edu</b><br>
                 <p>Department of Statistics<br>
                 University of California Davis<br>
 		Davis, CA 95616<br>
