--- a/research.html
+++ b/research.html
@@ -56,14 +56,21 @@
 	  <li> <b>X. Ding</b>, and F. Yang. <a href="https://projecteuclid.org/euclid.aoap/1527840030">A necessary and sufficient condition for edge universality at the largest singular values of covariance matrices</a>, <b>The Annals of Applied Probability</b>, 28(3):1679-1738, 2018. </li>    
 		    </o1>		
 			</div>	
+				<div> <b><font size="+1"> Collaborative research </font></b> <br> 
+			                <ol>
+					<li> <b>X. Ding</b>, X. Chen, M. Zou and G. Zhang. ASSVD: Adaptive Sparse Singular Value Decomposition for High Dimensional Matrices. 14(6): 2634-2648, 2020. </li>
+					</o1>	
+		</div>	
+		
 		<div> <b><font size="+1"> Working papers </font></b> <br> 
 			                <ol>
 					<li> <b>X. Ding</b>, and H. Ji. Local laws for multiplication of random matrices and spiked unitarily invariant models. In preparation, 2020. </li>
 					<li> <b>X. Ding</b>, and H.-T. Wu. Phase transition and robustness of kernel methods for recovering low-dimensional manifold corrupted in high dimensional noise. In preparation, 2020. </li>	
 					<li> <b>X. Ding</b>, and Z. Zhou. Simultaneous Sieve Inference for Time-Inhomogeneous Nonlinear Time Series Regression. In preparation, 2020. </li>	
 					</o1>	
-		<div>				
+		</div>	
 		
+
                 </div>
 	
             </div> 
