--- a/research.html
+++ b/research.html
@@ -58,7 +58,7 @@
 			</div>	
 				<div> <b><font size="+1"> Collaborative research </font></b> <br> 
 			                <ol>
-					<li> <b>X. Ding</b>, X. Chen, M. Zou and G. Zhang. ASSVD: Adaptive Sparse Singular Value Decomposition for High Dimensional Matrices. 14(6): 2634-2648, 2020. </li>
+					<li> <b>X. Ding</b>, X. Chen, M. Zou and G. Zhang. ASSVD: Adaptive Sparse Singular Value Decomposition for High Dimensional Matrices, <b> KSII Transactions on Internet and Information Systems</b>, 14(6): 2634-2648, 2020. </li>
 					</o1>	
 		</div>	
 		
