--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               <li><a href="index.html"><b>Home</b></a></li>
               <li><a href="research.html"><b>Research</b></a></li> 
               <li><a href="teaching.html"><b>Teaching</b></a></li> 
+	      <li><a href="gallary.html"><b>Gallary</b></a></li>
 		</ul>
 	  </div>
 	</nav>
