--- a/gallary.html
+++ b/gallary.html
@@ -55,10 +55,10 @@
 			 
 			                   <div class="row">
   <div class="column">
-    <img src="fish.jpg" alt="Snow" style="width:100%">
+    <img src="fish.jpg" alt="Trulli" width="243" height="290">
   </div>
   <div class="column">
-    <img src="vehicle.jpg" alt="Forest" style="width:100%">
+    <img src="vehicle.jpg" alt="Trulli1" width="243" height="290">
   </div>
 </div>
                 </div>
