--- a/gallary.html
+++ b/gallary.html
@@ -30,7 +30,7 @@
   
   
                 
-                <div class="col-md-16"  text-align:justify;">    
+                <div class="col-md-16"  style="margin-top:3%;">    
 			 
 	&nbsp &nbsp		                   
     <img src="fish.jpg" alt="Trulli" width="363" height="300" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
