--- a/gallary.html
+++ b/gallary.html
@@ -29,11 +29,11 @@
 
 	 <div id="banner" style="overflow: hidden; display: flex; justify-content:space-around;">
         <div class="" style="max-width: 20%; max-height: 20%;">
-            <img src ="fish.jpg">
+            <img src ="fish.jpg" width="400" height="310">
         </div>
 
         <div class="" style="max-width: 100%; max-height: 100%;">
-            <img src ="vehicle.jpg">
+            <img src ="vehicle.jpg" width="400" height="310">
         </div>
 
     </div>
