--- a/gallary.html
+++ b/gallary.html
@@ -34,6 +34,7 @@
 	<div class="w3-content" style="max-width:500px">
   <img class="mySlides" src="fish.jpg" style="width:100%">
   <img class="mySlides" src="vehicle.jpg" style="width:100%">
+  <img class="mySlides" src="house.jpg" style="width:100%">
 </div>
 
 <div class="w3-center">
