--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<p>  My research lies in the intersection of applied probability, mathematical statistics and statistical learning theory with a focus on manifold learning and machine learning. Currenly, I mainly focus on the following topics: Random Matrix Theory and its statistical applications, statistical optimal transport, non-stationary time series analysis, statistical foundation for algorithms (machine learning and manifold learning) for complex, high dimensional and noisy data, with applications in medical sciences (especially, sleep dynamics and sleep apnea).</p>
 					<p> <b><font size="+1"> Selected works </font></b>  
 			                <ul>  
-				 <li> <a href="https://arxiv.org/abs/1909.11734"> On the spectral property of kernel-based sensor fusion algorithms of high dimensional data</a>, <b>IEEE Transactions on Information Theory</b>, with Hau-Tieng Wu</li>
+				 <li> <a href="https://ieeexplore.ieee.org/document/9205615"> On the spectral property of kernel-based sensor fusion algorithms of high dimensional data</a>, <b>IEEE Transactions on Information Theory</b>, with Hau-Tieng Wu</li>
 		                 <li> <a href="https://projecteuclid.org/euclid.aos/1597370680">Estimation and inference for precision matrices of nonstationary time series</a>, <b>The Annals of Statistics</b>, with Zhou Zhou</li>
 			         <li> <a href="https://arxiv.org/abs/1809.10476"> Singular vector and singular subspace distribution for the matrix denoising model</a>, <b>The Annals of Statistics</b>, with Zhigang Bao and Ke Wang</li> 
 			         <li> <a href="https://arxiv.org/abs/1905.13060"> Spiked separable covariance matrices and principal components</a>,  <b>The Annals of Statistics</b>, with Fan Yang </li> 
