--- a/teaching.html
+++ b/teaching.html
@@ -47,7 +47,9 @@
                 <div style="margin-top:3%; text-align:justify;"> 
 			 <p> &nbsp </p>
 			<div><b><font size="+1"> Current Teaching at Davis</font></b><br> 
-			 <p> <b>TBA</b> </p>
+			 <li> <a href="https://statistics.ucdavis.edu/expanded-descriptions/108"> STA 108: Applied Statistical Methods: Regression Analysis</a>, Winter 2021</li>
+			 <li> <a href="https://statistics.ucdavis.edu/expanded-descriptions/290"> STA 290: Seminar in Statistics</a>, Winter 2021</li>	
+			 <li> <a href="https://statistics.ucdavis.edu/sta-221-big-data-high-performance-statistical-computing"> STA 221: Big Data & High Performance Statistical Computing </a>, Spring 2021 </li>	
 					
                         </div>
 			 <p> &nbsp </p>
