--- a/research.html
+++ b/research.html
@@ -64,9 +64,9 @@
 		
 		<div> <b><font size="+1"> Working papers </font></b> <br> 
 			                <ol>
-					<li> <b>X. Ding</b>, and H. Ji. Local laws for multiplication of random matrices and spiked unitarily invariant models. In preparation, 2020. </li>
-					<li> <b>X. Ding</b>, and H.-T. Wu. Phase transition and robustness of kernel methods for recovering low-dimensional manifold corrupted in high dimensional noise. In preparation, 2020. </li>	
-					<li> <b>X. Ding</b>, and Z. Zhou. Simultaneous Sieve Inference for Time-Inhomogeneous Nonlinear Time Series Regression. In preparation, 2020. </li>	
+					<li> Local laws for multiplication of random matrices and spiked unitarily invariant models. With H. C. Ji. 2020. </li>
+					<li> Phase transition and robustness of kernel methods for recovering low-dimensional manifold corrupted in high dimensional noise. With H.-T. Wu. 2020. </li>	
+					<li> Simultaneous Sieve Inference for Time-Inhomogeneous Nonlinear Time Series Regression. With Z.Zhou. 2020. </li>	
 					</o1>	
 		</div>	
 		
