--- a/research.html
+++ b/research.html
@@ -43,7 +43,7 @@
 			                <ol> 
 	  <li> <b>X. Ding</b> and F. Yang. <a href="https://arxiv.org/abs/2009.00389">Edge statistics of large dimensional deformed rectangular matrices</a>, arxiv: 2009.00389. In submission.</li>					
 	  <li> Z. Bao, <b>X. Ding</b>, J. Wang, and K. Wang. (alphabetical order). <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, arxiv:2008.11903. Submitted.</li>	 
-	  <li> <b>X. Ding</b> and F. Yang. <a href="https://arxiv.org/abs/2008.04166">Tracy-Widom distribution for the edge eigenvalues of Gram type random matrices</a>, arxiv: 2008.04166. In submission.</li>
+	  <li> <b>X. Ding</b> and F. Yang. <a href="https://arxiv.org/abs/2008.04166">Tracy-Widom distribution for the edge eigenvalues of Gram type random matrices</a>, arxiv: 2008.04166. Submitted.</li>
 	  <li> <b>X. Ding</b> and Z. Zhou. <a href="https://arxiv.org/abs/1912.12937">Globally Optimal And Adaptive Short-Term Forecast of Locally Stationary Time Series And A Test for Its Stability</a>, arxiv: 1912.12937. Submitted. </li>	 					
           <li> <b>X. Ding</b>, D. Yu, Z. Zhang, and D. Kong. <a href=""> Multivariate functional responses low rank regression with an application to brain imaging data</a>. Major revision and Resubmitted to <b>The Canadian Journal of Statistics</b>.</1i> 	
           <li> <b>X. Ding</b>, and H.-T. Wu. <a href="https://ieeexplore.ieee.org/document/9205615"> On the spectral property of kernel-based sensor fusion algorithms of high dimensional data</a>, arxiv: 1909.11734, <b>IEEE Transactions on Information Theory</b> (to appear).</1i> 	 	
