--- a/teaching.html
+++ b/teaching.html
@@ -54,7 +54,7 @@
                         </div>
 			 <p> &nbsp </p>
 				<div><b><font size="+1"> Past Teaching</font></b><br> 
-			 <li> <b>Duke University</b>: <a href="https://math.duke.edu/courses/MATH105L">MATH105L: Laboratory Calculus and Functions I</a>, Summer 2019 and 2020</li>
+			 <li> <b>Duke University</b>: <a href="https://math.duke.edu/courses/laboratory-calculus-and-functions-i">MATH105L: Laboratory Calculus and Functions I</a>, Summer 2019 and 2020</li>
 		         <li> <b>University of Toronto</b>: <a href="https://fas.calendar.utoronto.ca/course/mat244h1">MAT244H1: Introduction to Ordinary Differential Equations</a>, Fall 2017</li> 			
 					
                         </div>
