--- a/gallary.html
+++ b/gallary.html
@@ -35,6 +35,7 @@
   <img class="mySlides" src="fish.jpg" style="width:100%">
   <img class="mySlides" src="vehicle.jpg" style="width:100%">
   <img class="mySlides" src="house.jpg" style="width:100%">
+  <img class="mySlides" src="4.jpg" style="width:100%">
 </div>
 
 <div class="w3-center">
