--- a/gallary.html
+++ b/gallary.html
@@ -36,6 +36,8 @@
   <img class="mySlides" src="vehicle.jpg" style="width:100%">
   <img class="mySlides" src="house.jpg" style="width:100%">
   <img class="mySlides" src="4.jpg" style="width:100%">
+  <img class="mySlides" src="5.jpg" style="width:100%">
+  <img class="mySlides" src="6.jpg" style="width:100%">
 </div>
 
 <div class="w3-center">
