--- a/gallary.html
+++ b/gallary.html
@@ -38,6 +38,7 @@
   <img class="mySlides" src="4.jpg" style="width:100%">
   <img class="mySlides" src="5.jpg" style="width:100%">
   <img class="mySlides" src="6.jpg" style="width:100%">
+  <img class="mySlides" src="boat.jpg" style="width:100%">
 </div>
 
 <div class="w3-center">
