--- a/gallary.html
+++ b/gallary.html
@@ -39,6 +39,7 @@
   <img class="mySlides" src="5.jpg" style="width:100%">
   <img class="mySlides" src="6.jpg" style="width:100%">
   <img class="mySlides" src="boat.jpg" style="width:100%">
+  <img class="mySlides" src="people.jpg" style="width:100%">
 </div>
 
 <div class="w3-center">
