--- a/research.html
+++ b/research.html
@@ -41,6 +41,7 @@
 			     <p> &nbsp </p>
 	        <div> <b><font size="+1"> Research papers </font></b><br>  
 			                <ol> 
+	  <li> <b>X. Ding </b> and H. Ji. <a href="https://arxiv.org/abs/2010.16083">Local laws for multiplication of random matrices and spiked invariant models</a>, arxiv: 2010.16083. </li>					
 	  <li> <b>X. Ding</b> and F. Yang. <a href="https://arxiv.org/abs/2009.00389">Edge statistics of large dimensional deformed rectangular matrices</a>, arxiv: 2009.00389. In submission.</li>					
 	  <li> Z. Bao, <b>X. Ding</b>, J. Wang, and K. Wang. (alphabetical order). <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, arxiv:2008.11903. Submitted.</li>	 
 	  <li> <b>X. Ding</b> and F. Yang. <a href="https://arxiv.org/abs/2008.04166">Tracy-Widom distribution for the edge eigenvalues of Gram type random matrices</a>, arxiv: 2008.04166. Submitted.</li>
@@ -64,8 +65,7 @@
 		
 		<div> <b><font size="+1"> Working papers </font></b> <br> 
 			                <ol>
-					<li> Local laws for multiplication of random matrices and spiked unitarily invariant models. With H. C. Ji. 2020. </li>
-					<li> Phase transition and robustness of kernel methods for recovering low-dimensional manifold corrupted in high dimensional noise. With H.-T. Wu. 2020. </li>	
+					<li> Phase transition and robustness of graph Laplacian of random point cloud corrupted by high dimensional noise. With H.-T. Wu. 2020. </li>	
 					<li> Simultaneous Sieve Inference for Time-Inhomogeneous Nonlinear Time Series Regression. With Z.Zhou. 2020. </li>	
 					</o1>	
 		</div>	
