--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@
 	        <div> <b><font size="+1"> Research papers </font></b><br>  
 			                <ol> 
 	  <li> <b>X. Ding </b> and H. Ji. <a href="https://arxiv.org/abs/2010.16083">Local laws for multiplication of random matrices and spiked invariant models</a>, arxiv: 2010.16083. </li>					
-	  <li> <b>X. Ding</b> and F. Yang. <a href="https://arxiv.org/abs/2009.00389">Edge statistics of large dimensional deformed rectangular matrices</a>, arxiv: 2009.00389. In submission.</li>					
+	  <li> <b>X. Ding</b> and F. Yang. <a href="https://arxiv.org/abs/2009.00389">Edge statistics of large dimensional deformed rectangular matrices</a>, arxiv: 2009.00389. Submitted.</li>					
 	  <li> Z. Bao, <b>X. Ding</b>, J. Wang, and K. Wang. (alphabetical order). <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, arxiv:2008.11903. Submitted.</li>	 
 	  <li> <b>X. Ding</b> and F. Yang. <a href="https://arxiv.org/abs/2008.04166">Tracy-Widom distribution for the edge eigenvalues of Gram type random matrices</a>, arxiv: 2008.04166. Submitted.</li>
 	  <li> <b>X. Ding</b> and Z. Zhou. <a href="https://arxiv.org/abs/1912.12937">Globally Optimal And Adaptive Short-Term Forecast of Locally Stationary Time Series And A Test for Its Stability</a>, arxiv: 1912.12937. Submitted. </li>	 					
