--- a/research.html
+++ b/research.html
@@ -41,6 +41,7 @@
 			     <p> &nbsp </p>
 	        <div> <b><font size="+1"> Research papers </font></b><br>  
 			                <ol> 
+	  <li> <b>X. Ding </b> and H.-T. Wu. <a href="https://arxiv.org/abs/2011.10725">Phase transition of graph Laplacian of high dimensional noisy random point cloud</a>, arxiv: 2011.10725. </li>							
 	  <li> <b>X. Ding </b> and H. Ji. <a href="https://arxiv.org/abs/2010.16083">Local laws for multiplication of random matrices and spiked invariant models</a>, arxiv: 2010.16083. </li>					
 	  <li> <b>X. Ding</b> and F. Yang. <a href="https://arxiv.org/abs/2009.00389">Edge statistics of large dimensional deformed rectangular matrices</a>, arxiv: 2009.00389. Submitted.</li>					
 	  <li> Z. Bao, <b>X. Ding</b>, J. Wang, and K. Wang. (alphabetical order). <a href="https://arxiv.org/abs/2008.11903">Statistical inference for principal components of spiked covariance matrices</a>, arxiv:2008.11903. Submitted.</li>	 
@@ -64,9 +65,8 @@
 		</div>	
 		
 		<div> <b><font size="+1"> Working papers </font></b> <br> 
-			                <ol>
-					<li> Phase transition and robustness of graph Laplacian of random point cloud corrupted by high dimensional noise. With H.-T. Wu. 2020. </li>	
-					<li> Simultaneous Sieve Inference for Time-Inhomogeneous Nonlinear Time Series Regression. With Z.Zhou. 2020. </li>	
+			                <ol>	
+					<li> Simultaneous Sieve Inference for Time-Inhomogeneous Nonlinear Time Series Regression. With Z.Zhou. 2020+. </li>	
 					</o1>	
 		</div>	
 		
